--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,11 @@ font-family: 'Roboto', sans-serif;*/
 	text-shadow: 2px 2px 4px #5f5f5f;
 }
 
+.franquiciasfont{
+	font-family: 'Roboto', sans-serif;
+	font-size: 2rem;
+}
+
 
 /* Medidas generales */
 
@@ -153,6 +158,8 @@ main{
 	font-family: 'Roboto', sans-serif !important;
 }
 
+ /* mensaje estacion con amigos */
+ /* ------------------------------------------------------------ */
 #imgamigos{
 	width: 100% !important;
 	height: 150vh;
@@ -194,4 +201,17 @@ main{
 .amigoscaja{
 	width: 100%;
 	height: 165vh;
+}
+/* ------------------------------------------------------------ */
+
+
+
+#franquiciaimg{
+	width: 50%;
+	height: 600px !important;
+}
+
+#btnmedidas{
+	width: 40%;
+	height: 45px;
 }
