--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,10 @@
 	outline: none;
      box-sizing: border-box;
 }
+
+.textdecoration{
+	text-decoration: none;
+}
 /* Fuentes */
 /*font-family: 'Lora', serif;
 font-family: 'Roboto', sans-serif;*/
@@ -45,7 +49,7 @@ font-family: 'Roboto', sans-serif;*/
 
 body{
 	width: 100vw;
-	height: 500vh;
+	height: 735vh;
 }
 
 header{
@@ -55,9 +59,14 @@ header{
 
 main{
 	width: 100vw;
-	height: 500vh;
+	height: 720vh;
 }
 
+footer{
+	background-color: #000000;
+	width: 100vw;
+	height: 40vh;
+}
 /* Estilos del Header */
 
 #logonav{
@@ -214,4 +223,31 @@ main{
 #btnmedidas{
 	width: 40%;
 	height: 45px;
+}
+
+
+/* SECCION FOOTER */ 
+
+.titulofooter{
+	font-family: 'Roboto', sans-serif;
+	color: white;
+	font-size: 2rem;
+}
+
+
+
+.menufooter{
+	font-family: 'Roboto', sans-serif;
+	color: white;
+	font-size: 1rem;
+}
+
+.milafooter{
+	font-family: 'Roboto', sans-serif;
+	font-size: 1rem;
+	color: white;
+}
+
+.opcionesfooter{
+	font-family: 'Lora', serif;
 }
