--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ font-family: 'Roboto', sans-serif;*/
 
 body{
 	width: 100vw;
-	height: 735vh;
+	height: 573vh;
 }
 
 header{
@@ -59,7 +59,7 @@ header{
 
 main{
 	width: 100vw;
-	height: 720vh;
+	height: 510vh;
 }
 
 footer{
@@ -250,4 +250,28 @@ footer{
 
 .opcionesfooter{
 	font-family: 'Lora', serif;
+	color: rgb(141, 141, 141);
+}
+
+.opcionesfooter:hover{
+	color: white;
+}
+
+.redes{
+	width: 50px;
+	height: 50px;
+	background-color: white;
+}
+
+.fa-instagram{
+	font-size: 45px;
+}
+
+.fa-facebook{
+	font-size: 45px;
+}
+
+#logofooter{
+	width: 150px;
+	height: 150px;
 }
