--- a/css/style.css
+++ b/css/style.css
@@ -284,10 +284,10 @@ footer{
 
 /* MEDIA QUERYS */
 
-@media only screen and (max-width: 375px) {
+@media only screen and (min-width: 279px) and (max-width: 375px) {
 	body{
 		width: 100vw;
-		height: 556vh;
+		height: 500vh;
 	}
 	
 	header{
@@ -393,7 +393,7 @@ footer{
 @media only screen and (min-width: 376px) and (max-width: 411px){
 	body{
 		width: 100vw;
-		height: 464vh;
+		height: 470vh;
 	}
 	
 	header{
@@ -405,7 +405,7 @@ footer{
 	
 	main{
 		width: 100vw;
-		height: 410vh;
+		height: 415vh;
 	}
 	
 	footer{
