responsive error fixed

--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,6 @@ header{
 
 main{
 	width: 100vw;
-	height: 510vh;
 }
 
 footer{
@@ -289,25 +288,22 @@ footer{
 @media (min-width: 280px){
 	body{
 		width: 100vw;
-		height: 500vh;
-		position: relative;
+		height: 300vh;
 	}
 	
 	header{
 		width: 100vw !important;
-		z-index: 2;
+		z-index: 3;
 		position: absolute;
 	}
 	
 	main{
 		width: 100vw;
-		height: 460vh;
 	}
 	
 	footer{
 		background-color: #000000;
 		width: 100vw;
-		height: 40vh;
 	}
 	.botonpeya{
 		display: none;
@@ -315,8 +311,7 @@ footer{
 	.img-main{
 		width: 100%;
 		height: 200px;
-		margin-top: 145px;
-		
+		margin-top: 140px;
 	}
 	
 	.contenedor{
@@ -404,45 +399,390 @@ footer{
 		width: 700px !important;
 		height: 200px !important;
 		margin-left: 10px;
+		margin-bottom: 10px;
 	}
+
 }
 
 @media (min-width: 576px){
 	body{
 		width: 100vw;
-		height: 573vh;
+		height: 300vh;
 	}
 	
 	header{
-		width: 100vw;
-		height: 22vh;
+		width: 100vw !important;
+		z-index: 3;
+		position: absolute;
 	}
 	
 	main{
 		width: 100vw;
-		height: 510vh;
 	}
 	
 	footer{
 		background-color: #000000;
 		width: 100vw;
-		height: 40vh;
 	}
 	.botonpeya{
 		display: none;
 	}
+	.img-main{
+		width: 100%;
+		height: 200px;
+		margin-top: 140px;
+	}
+	
+	.contenedor{
+		width: 113%;
+		position: relative;
+	}
+	.conocenosfont{
+		font-family: 'Roboto', sans-serif;
+		color: #CA6F1E !important;
+		font-size: 3.5rem;
+		text-shadow: 4px 4px 6px #000000;
+	}
+	.fuentemila {
+		font-family: 'Roboto', sans-serif;
+		font-style: bold;
+		color: #f8f7f6  !important;
+		text-shadow: 6px 6px 8px #000000;
+	  }
+	
+	
+	.mensajemila{
+		font-size: 3rem;
+		position: absolute;
+	  top: 50%;
+	  left: 50%;
+	  transform: translate(-45%, -30%);
+	  opacity: 0;
+	  transition: opacity 0.8s ease;
+	}
+	
+	.mensajemila.show{
+		position: absolute;
+		opacity: 1;
+		top: 300px; /* Puedes ajustar la posición de acuerdo a tus preferencias */
+		left: 50%;
+		top: 50%;
+		transform: translateX(-45%, -30%);
+	}
+	#imgamigos{
+		width: 100% !important;
+		height: 50vh;
+		margin-top: 5%;
+	}
+	.mensajeamigos{
+		font-size: 2rem;
+		position: absolute;
+		top: 10%;
+		left: 10%;
+		transform: translateX(-50%, -30%);
+	  opacity: 0;
+	  transition: opacity 0.8s ease;
+	}
+	
+	.mensajeamigos.show{
+		position: absolute;
+		opacity: 1;
+		top: 10%;
+		left: 10%;
+		transform: translateX(-50%, -30%);
+	}
+	.amigoscaja{
+		width: 100%;
+		height: 55vh;
+	}
+	.conocenosfont{
+		font-family: 'Roboto', sans-serif;
+		color: #CA6F1E !important;
+		font-size: 2.8rem;
+		text-shadow: 4px 4px 6px #000000;
+	}
+	.franquiciasfont{
+		font-family: 'Roboto', sans-serif;
+		font-size: 0.9rem;
+	}
+	.left{
+		margin-left: 35px;
+	}
+	#btnmedidas{
+		width: 60%;
+		height: 45px;
+		margin-left: 40px;
+		margin-bottom: 5px;
+	}
+	#franquiciaimg{
+		width: 700px !important;
+		height: 200px !important;
+		margin-left: 10px;
+		margin-bottom: 10px;
+	}
+
 	
 }
 @media (min-width: 768px){
+	body{
+		width: 100vw;
+		height: 300vh;
+	}
+	
+	header{
+		width: 100vw !important;
+		z-index: 3;
+		position: absolute;
+	}
+	
+	main{
+		width: 100vw;
+	}
+	
+	footer{
+		background-color: #000000;
+		width: 100vw;
+	}
+	.botonpeya{
+		display: none;
+	}
+	.img-main{
+		width: 100%;
+		height: 200px;
+		margin-top: 140px;
+	}
+	
+	.contenedor{
+		width: 113%;
+		position: relative;
+	}
+	.conocenosfont{
+		font-family: 'Roboto', sans-serif;
+		color: #CA6F1E !important;
+		font-size: 3.5rem;
+		text-shadow: 4px 4px 6px #000000;
+	}
+	.fuentemila {
+		font-family: 'Roboto', sans-serif;
+		font-style: bold;
+		color: #f8f7f6  !important;
+		text-shadow: 6px 6px 8px #000000;
+	  }
+	
+	
+	.mensajemila{
+		font-size: 3rem;
+		position: absolute;
+	  top: 50%;
+	  left: 50%;
+	  transform: translate(-45%, -30%);
+	  opacity: 0;
+	  transition: opacity 0.8s ease;
+	}
+	
+	.mensajemila.show{
+		position: absolute;
+		opacity: 1;
+		top: 300px; /* Puedes ajustar la posición de acuerdo a tus preferencias */
+		left: 50%;
+		top: 50%;
+		transform: translateX(-45%, -30%);
+	}
+	#imgamigos{
+		width: 100% !important;
+		height: 50vh;
+		margin-top: 5%;
+	}
+	.mensajeamigos{
+		font-size: 2rem;
+		position: absolute;
+		top: 10%;
+		left: 10%;
+		transform: translateX(-50%, -30%);
+	  opacity: 0;
+	  transition: opacity 0.8s ease;
+	}
+	
+	.mensajeamigos.show{
+		position: absolute;
+		opacity: 1;
+		top: 10%;
+		left: 10%;
+		transform: translateX(-50%, -30%);
+	}
+	.amigoscaja{
+		width: 100%;
+		height: 55vh;
+	}
+	.conocenosfont{
+		font-family: 'Roboto', sans-serif;
+		color: #CA6F1E !important;
+		font-size: 2.8rem;
+		text-shadow: 4px 4px 6px #000000;
+	}
+	.franquiciasfont{
+		font-family: 'Roboto', sans-serif;
+		font-size: 0.9rem;
+	}
+	.left{
+		margin-left: 35px;
+	}
+	#btnmedidas{
+		width: 60%;
+		height: 45px;
+		margin-left: 40px;
+		margin-bottom: 5px;
+	}
+	#franquiciaimg{
+		width: 700px !important;
+		height: 420px !important;
+		margin-left: 10px;
+		margin-bottom: 10px;
+	}
 
 }
 
 @media (min-width: 992px){
-
+	body{
+		width: 100vw;
+		height: 300vh;
+	}
+	
+	header{
+		width: 100vw !important;
+		z-index: 3;
+		position: absolute;
+	}
+	
+	main{
+		width: 100vw;
+	}
+	
+	footer{
+		background-color: #000000;
+		width: 100vw;
+	}
+	.botonpeya{
+		display: none;
+	}
+	.img-main{
+		width: 100%;
+		height: 200px;
+		margin-top: 140px;
+	}
+	
+	.contenedor{
+		width: 113%;
+		position: relative;
+	}
+	.conocenosfont{
+		font-family: 'Roboto', sans-serif;
+		color: #CA6F1E !important;
+		font-size: 3.5rem;
+		text-shadow: 4px 4px 6px #000000;
+	}
+	.fuentemila {
+		font-family: 'Roboto', sans-serif;
+		font-style: bold;
+		color: #f8f7f6  !important;
+		text-shadow: 6px 6px 8px #000000;
+	  }
+	
+	
+	.mensajemila{
+		font-size: 3rem;
+		position: absolute;
+	  top: 50%;
+	  left: 50%;
+	  transform: translate(-45%, -30%);
+	  opacity: 0;
+	  transition: opacity 0.8s ease;
+	}
+	
+	.mensajemila.show{
+		position: absolute;
+		opacity: 1;
+		top: 300px; /* Puedes ajustar la posición de acuerdo a tus preferencias */
+		left: 50%;
+		top: 50%;
+		transform: translateX(-45%, -30%);
+	}
+	#imgamigos{
+		width: 100% !important;
+		height: 50vh;
+		margin-top: 5%;
+	}
+	.mensajeamigos{
+		font-size: 2rem;
+		position: absolute;
+		top: 10%;
+		left: 10%;
+		transform: translateX(-50%, -30%);
+	  opacity: 0;
+	  transition: opacity 0.8s ease;
+	}
+	
+	.mensajeamigos.show{
+		position: absolute;
+		opacity: 1;
+		top: 10%;
+		left: 10%;
+		transform: translateX(-50%, -30%);
+	}
+	.amigoscaja{
+		width: 100%;
+		height: 55vh;
+	}
+	.conocenosfont{
+		font-family: 'Roboto', sans-serif;
+		color: #CA6F1E !important;
+		font-size: 2.8rem;
+		text-shadow: 4px 4px 6px #000000;
+	}
+	.franquiciasfont{
+		font-family: 'Roboto', sans-serif;
+		font-size: 0.9rem;
+	}
+	.left{
+		margin-left: 35px;
+	}
+	#btnmedidas{
+		width: 60%;
+		height: 45px;
+		margin-left: 40px;
+		margin-bottom: 5px;
+	}
+	#franquiciaimg{
+		width: 700px !important;
+		height: 420px !important;
+		margin-left: 10px;
+		margin-bottom: 10px;
+	}
 }
 
 @media (min-width: 1200px){
-
+	body{
+		width: 100vw;
+		height: 300vh;
+	}
+	
+	header{
+		width: 100vw !important;
+		z-index: 3;
+		position: absolute;
+	}
+	
+	main{
+		width: 100vw;
+	}
+	
+	footer{
+		background-color: #000000;
+		width: 100vw;
+	}
+	.botonpeya{
+		display: block;
+	}
 }
 
 @media (min-width: 1400px){
